--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /SoulVoice.API/SV.Repository/bin
 /SoulVoice.API/SV.Repository.Core/obj
 /SoulVoice.API/SV.Repository.Core/bin
+/SoulVoice.API/.vs
