--- a/SoulVoice.API/SV.Entity/SV.Entity.csproj
+++ b/SoulVoice.API/SV.Entity/SV.Entity.csproj
@@ -5,7 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AZ.Dapper.LambdaExtension" Version="1.2.6" />
+    <Compile Remove="Dmx\**" />
+    <EmbeddedResource Remove="Dmx\**" />
+    <None Remove="Dmx\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="1.50.4" />
+    <PackageReference Include="DapperExtensionsAspNetCore" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
