--- a/SoulVoice.API/SV.Repository.Core/SV.Repository.Core.csproj
+++ b/SoulVoice.API/SV.Repository.Core/SV.Repository.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SV.Common\SV.Common.csproj" />
+    <ProjectReference Include="..\SV.Entity\SV.Entity.csproj" />
   </ItemGroup>
 
 </Project>
