--- a/SoulVoice.API/SV.Application/SV.Application.csproj
+++ b/SoulVoice.API/SV.Application/SV.Application.csproj
@@ -8,6 +8,7 @@
     <ProjectReference Include="..\SV.Common\SV.Common.csproj" />
     <ProjectReference Include="..\SV.Entity\SV.Entity.csproj" />
     <ProjectReference Include="..\SV.Repository.Core\SV.Repository.Core.csproj" />
+    <ProjectReference Include="..\SV.Repository\SV.Repository.csproj" />
   </ItemGroup>
 
 </Project>
