--- a/SoulVoice.API/SV.API/appsettings.json
+++ b/SoulVoice.API/SV.API/appsettings.json
@@ -1,4 +1,12 @@
 ﻿{
+  "ConnectionStrings": {
+    //"CommandDB": "Server=(localdb)\\mssqllocaldb;Database=EDWEBAPI;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"QueryDB": "Server=(localdb)\\mssqllocaldb;Database=EDWEBAPI;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"CommandDB": "Server=.\\SQLExpress;Database=EDWEBAPI;User ID=sa;Password=1qaz!QAZ;Application Name=test;",
+    //"QueryDB": "Server=.\\SQLExpress;Database=EDWEBAPI;User ID=sa;Password=1qaz!QAZ;Application Name=test;",
+    "CommandDB": "Server=localhost;Database=SoulVoice;User ID=sa;Password=1qaz!QAZ;pooling=true;CharSet=utf8;port=3306;sslmode=none",
+    "QueryDB": "Server=localhost;Database=SoulVoice;User ID=sa;Password=1qaz!QAZ;pooling=true;CharSet=utf8;port=3306;sslmode=none"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
