--- a/SoulVoice.API/SV.Application/SV.Application.csproj
+++ b/SoulVoice.API/SV.Application/SV.Application.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SV.Common\SV.Common.csproj" />
     <ProjectReference Include="..\SV.Entity\SV.Entity.csproj" />
     <ProjectReference Include="..\SV.Repository.Core\SV.Repository.Core.csproj" />
