--- a/SoulVoice.API/SV.Repository/SV.Repository.csproj
+++ b/SoulVoice.API/SV.Repository/SV.Repository.csproj
@@ -7,8 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.2" />
-    <PackageReference Include="MySql.Data" Version="8.0.11" />
-    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.11" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.0.1" />
     <PackageReference Include="Z.EntityFramework.Plus.BatchDelete.EFCore" Version="1.7.18" />
     <PackageReference Include="Z.EntityFramework.Plus.BatchUpdate.EFCore" Version="1.7.18" />
   </ItemGroup>
