--- a/SoulVoice.API/SV.Entity/SV.Entity.csproj
+++ b/SoulVoice.API/SV.Entity/SV.Entity.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="DapperExtensionsAspNetCore" Version="1.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Sql\" />
+  </ItemGroup>
+
 </Project>
