--- a/SoulVoice.API/SV.Application/SV.Application.csproj
+++ b/SoulVoice.API/SV.Application/SV.Application.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\SV.Repository\SV.Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions\Account\" />
+  </ItemGroup>
+
 </Project>
