--- a/SoulVoice.API/SV.API/appsettings.json
+++ b/SoulVoice.API/SV.API/appsettings.json
@@ -1,23 +1,29 @@
 ﻿{
-  "ConnectionStrings": {
-    //"CommandDB": "Server=.\\SQLExpress;Database=EDWEBAPI;User ID=sa;Password=1qaz!QAZ;Application Name=test;",
-    //"QueryDB": "Server=.\\SQLExpress;Database=EDWEBAPI;User ID=sa;Password=1qaz!QAZ;Application Name=test;",
-    //"CommandDB": "Server=localhost;Database=SoulVoice;User ID=sa;Password=1qaz!QAZ;pooling=true;CharSet=utf8;port=3306;sslmode=none",
-    //"QueryDB": "Server=localhost;Database=SoulVoice;User ID=sa;Password=1qaz!QAZ;pooling=true;CharSet=utf8;port=3306;sslmode=none",
-    "CommandDB": "Server=localhost;Database=SoulVoice;User ID=SoulVoice;Password=1qaz!QAZ;pooling=true;CharSet=utf8;port=3306;sslmode=none",
-    "QueryDB": "Server=localhost;Database=SoulVoice;User ID=SoulVoice;Password=1qaz!QAZ;pooling=true;CharSet=utf8;port=3306;sslmode=none"
-  },
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    }
-  }
+	"ConnectionStrings": {
+		//"CommandDB": "Server=.\\SQLExpress;Database=EDWEBAPI;User ID=sa;Password=1qaz!QAZ;Application Name=test;",
+		//"QueryDB": "Server=.\\SQLExpress;Database=EDWEBAPI;User ID=sa;Password=1qaz!QAZ;Application Name=test;",
+		//"CommandDB": "Server=localhost;Database=SoulVoice;User ID=sa;Password=1qaz!QAZ;pooling=true;CharSet=utf8;port=3306;sslmode=none",
+		//"QueryDB": "Server=localhost;Database=SoulVoice;User ID=sa;Password=1qaz!QAZ;pooling=true;CharSet=utf8;port=3306;sslmode=none",
+		"CommandDB": "Server=localhost;Database=SoulVoice;User ID=SoulVoice;Password=1qaz!QAZ;pooling=true;CharSet=utf8;port=3306;sslmode=none",
+		"QueryDB": "Server=localhost;Database=SoulVoice;User ID=SoulVoice;Password=1qaz!QAZ;pooling=true;CharSet=utf8;port=3306;sslmode=none"
+	},
+	"Logging": {
+		"IncludeScopes": false,
+		"Debug": {
+			"LogLevel": {
+				"Default": "Warning"
+			}
+		},
+		"Console": {
+			"LogLevel": {
+				"Default": "Warning"
+			}
+		}
+	},
+	"JwtSettings": {
+		"Issuer": "http://localhost:44319",
+		"Audience": "SoulVoiceAPI",
+		"SecretKey": "Soul-Voice-will------win",
+		"Validity": 7
+	}
 }
